# VPNResearchLab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap.py  demo_capture.py  pyproject.toml  requirements.txt
configs/: topology.yaml
configs/vpn/: wireguard.yaml
docs/architecture/: architecture.md
docs/paper/: attack_flow.md  notes.md
docs/roadmap/: roadmap.md
experiments/: cleanup.py  experiment_runtime.py  run_baseline_experiment.py  run_baseline_validation.py  runtime_logger.py
framework/evaluation/: environment_requirements.py  evaluation_runner.py  experiment_registry.py  experiment_spec.py  metrics_summary.py  report_builder.py
framework/observation/: __init__.py  capture.py  constants.py  exceptions.py  extractor.py  models.py  storage.py  types.py
framework/traffic/: dns_server.py  http_server.py  tcp_echo.py  traffic_generator.py  traffic_validator.py  udp_echo.py
lab/: config.py  destroy_lab.py  run_lab.py  run_traffic_demo.py  run_verification.py  run_vpn_demo.py  start_servers.py
lab/topology/: namespace_manager.py  network_builder.py  routing_manager.py  topology_builder.py
lab/validation/: metrics_collector.py  report_generator.py  validator.py  verification_runner.py
lab/vpn/: config.py  key_manager.py  validator.py  (+2 more)
tests/: test_baseline_validation.py  test_config.py  test_evaluation_harness.py  test_experiment_spec.py  test_extractor.py  test_healthcheck.py  test_key_manager.py  test_namespace_manager.py  test_observation_models.py  test_platform.py  test_storage.py  test_vpn_config.py  test_vpn_deployment.py
